--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Game/Blueprint/BP_GameModeCharacter.BP_GameModeCharacter_C
+GameDefaultMap=/Game/Maps/Proto_GD_LD_Menu.Proto_GD_LD_Menu
+GlobalDefaultGameMode=/Game/Blueprint/Character/BP_GameModeCharacter.BP_GameModeCharacter_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
