[Debug Antegoniste] + [Debug Proto]

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Proto_GD_LD_Menu.Proto_GD_LD_Menu
+GameDefaultMap=/Game/Maps/GameSceneMenu.GameSceneMenu
 GlobalDefaultGameMode=/Game/Blueprint/Character/BP_GameModeCharacter.BP_GameModeCharacter_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
