[UX - Camera Transition] [In Progress]

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/GameSceneMenu.GameSceneMenu
+GameDefaultMap=/Game/Test_Meca/Maps/OSInterface_Map.OSInterface_Map
 GlobalDefaultGameMode=/Game/Blueprint/Character/BP_GameModeCharacter.BP_GameModeCharacter_C
+EditorStartupMap=/Game/Test_Meca/Maps/OSInterface_Map.OSInterface_Map
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
