Props intregration (New and update)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/GameSceneMenu.GameSceneMenu
 GlobalDefaultGameMode=/Game/Blueprint/Character/BP_GameModeCharacter.BP_GameModeCharacter_C
+EditorStartupMap=/Game/GA/PentHouse_MapsGA.PentHouse_MapsGA
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
