--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,6 +49,7 @@ r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
