suite setup cinématique

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,4 +14,10 @@ ManualIPAddress=
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+r.ReflectionMethod=1
+r.GenerateMeshDistanceFields=True
+r.DynamicGlobalIlluminationMethod=1
+r.DistanceFields.DefaultVoxelDensity=0.400000
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
 
