--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,5 +19,5 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.DistanceFields.DefaultVoxelDensity=0.400000
 r.SkinCache.CompileShaders=True
-r.RayTracing=True
+r.RayTracing=False
 
