--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,5 +16,5 @@ ManualIPAddress=
 r.StencilForLODDither=False
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ProtoMeca_2/Maps/Bureau_V2_Map.Bureau_V2_Map
+GameDefaultMap=/Game/ProtoMeca_2/Maps/Bureau_MapsGA1_ProtoBuild.Bureau_MapsGA1_ProtoBuild
 
