--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,13 @@ bUseCustomFontDPI=False
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/JamesSteelDesk/TomorrowsDay_Maps.TomorrowsDay_Maps
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_30
+
+[/Script/LevelSequence.LevelSequenceProjectSettings]
+LevelSequence.DefaultDisplayRate=60fps
+
+[/Script/Engine.Engine]
+bUseFixedFrameRate=True
+FixedFrameRate=30.000000
+
