--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,6 +92,7 @@ bUseCustomFontDPI=False
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/JamesSteelDesk/TomorrowsDay_Maps.TomorrowsDay_Maps
+EditorStartupMap=/Game/Maps/Penthouse/PentHouse_Maps_Final.PentHouse_Maps_Final
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_30
