--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ ManualIPAddress=
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=True
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
