[UI - Main Menu] [UI - Fix]

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,7 +92,7 @@ bUseCustomFontDPI=False
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/JamesSteelDesk/TomorrowsDay_Maps.TomorrowsDay_Maps
+GameDefaultMap=/Game/Maps/MainMenu/L_MainMenu.L_MainMenu
 EditorStartupMap=/Game/Maps/Penthouse/PentHouse_Maps_Final.PentHouse_Maps_Final
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
