--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,9 @@ ProjectID=266EDAA743DEC4994495EE90E33B09DF
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=True
++StartupMovies=V_INTRO_TD
+
