[UI - CTR Effect]

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,7 +93,7 @@ bUseCustomFontDPI=False
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu/L_MainMenu.L_MainMenu
-EditorStartupMap=/Game/Maps/Penthouse/PentHouse_Maps_Final.PentHouse_Maps_Final
+EditorStartupMap=/Game/Maps/MainMenu/L_MainMenu.L_MainMenu
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_30
