--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,7 +95,7 @@ bUseCustomFontDPI=False
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu/L_MainMenu.L_MainMenu
-EditorStartupMap=/Game/Maps/MainMenu/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/Maps/JamesSteelDesk/L_TomorrowsDay.L_TomorrowsDay
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_30
@@ -106,4 +106,7 @@ LevelSequence.DefaultDisplayRate=60fps
 [/Script/Engine.Engine]
 bUseFixedFrameRate=True
 FixedFrameRate=30.000000
+
+[/Script/Engine.AnimationSettings]
+DefaultFrameRate=(Numerator=60,Denominator=1)
 
